# CS5220_Project

./: .gitignore  CMakeLists.txt  README.md  poster_text.txt  report.md
figures/: fig1_pipeline.py  fig2_topology.py  fig3_mpi_bar.py  fig4_scaling.py  fig5_alpha_beta.py
scripts/: bench_cpu_tree_vs_ring.sbatch  bench_cpu_tree_vs_ring.sh  bench_tree_vs_ring_gpu_nodes.sbatch  download_data.sh  env_cpu_mpi.sh  quick_ring_test.sbatch  quick_tree_test.sbatch  quick_tree_test_cpu.sbatch  run_local.sh  run_mpi_comm_local.sh  smoke_test.sbatch  submit_perlmutter.sbatch
src/: config.h  main.cpp  timer.h
src/comm/: ring_allreduce.cpp  ring_allreduce.h  tree_reduce.cpp  tree_reduce.h
src/data/: data_loader.cpp  data_loader.h
src/mlp/: activations.cuh  mlp.cu  mlp.h
src/tools/: ring_allreduce_test.cpp  tree_reduce_test.cpp
